--- a/linki/style.css
+++ b/linki/style.css
@@ -1,72 +1,37 @@
-/* styles.css */
-
 body {
     margin: 0;
     padding: 0;
-    background-color: #000;
-}
-
-.gallery {
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    padding: 20px;
+    height: 100vh;
 }
-
-.thumbnails {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: center;
+.container {
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
 }
 
-.thumbnails img {
-    width: 400px; /* Dwa razy większy niż pierwotnie */
-    height: auto;
-    max-width: 100%; /* Zapobiega przekraczaniu szerokości kontenera */
-    cursor: pointer;
-    transition: transform 0.3s; /* Dodajemy animację */
-}
-
-/* Efekt powiększenia po najechaniu myszką */
-.thumbnails img:hover {
-    transform: scale(1.15); /* Powiększenie o 15% */
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 800px;
-}
-
-.close {
-    color: #fff;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    padding: 10px;
-}
-
-.close:hover,
-.close:focus {
-    color: #ccc;
+a, .link-button {
+    padding: 30px 60px;
+    background-color: black;
+    color: white;
     text-decoration: none;
-    cursor: pointer;
+    border-radius: 5px;
+    font-size: 2em;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+a:hover, .link-button:hover {
+    background-color: #333333;
+    color: #ffffff;
+}
+
+.link-button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
