--- a/parafia/style.css
+++ b/parafia/style.css
@@ -1,37 +1,37 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-size: cover; 
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #333333; /* ciemno szary */
+  color: #ffffff; /* biały */
 }
+
 .container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-a, .link-button {
-    padding: 30px 60px;
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 2em;
-    transition: background-color 0.3s, color 0.3s;
+h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 24px;
 }
 
-a:hover, .link-button:hover {
-    background-color: #333333;
-    color: #ffffff;
+.attraction {
+  margin-bottom: 40px;
 }
 
-.link-button {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
+.attraction h2 {
+  font-size: 20px;
+}
+
+.attraction p {
+  font-size: 16px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
 }
