--- a/linki/style.css
+++ b/linki/style.css
@@ -17,7 +17,7 @@ body {
 
 a, .link-button {
     padding: 30px 60px;
-    background-color: black;
+    background-color: blue;
     color: white;
     text-decoration: none;
     border-radius: 5px;
